Moved around workflow permissions

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,6 +3,13 @@ on:
     push:
       branches: [ "dev" ]   
     workflow_dispatch:
+
+        # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+    contents: read
+    pages: write
+    id-token: write
+  
 jobs:
     build:
         runs-on: ubuntu-latest
