--- a/.github/workflows/build-dist.yml
+++ b/.github/workflows/build-dist.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Build
+    - name: npm build
       run: |
         cd v0.2.0
         npm install
