--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,8 +15,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
          - uses: actions/checkout@v3
-    call-workflow1:
+    build-dist:
         uses: ./.github/workflows/build-dist.yml
-    call-workflow2:
-        needs: call-workflow1
+    deploy-site:
+        needs: build-dist
         uses: ./.github/workflows/deploy-site.yml
