--- a/v0.2.0/package.json
+++ b/v0.2.0/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "express": "^4.17.3",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
