Modified path for deploy artifact

--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           # Upload entire repository
-          path: 'v0.2.0/dist'
+          path: '/home/runner/work/Cyber-Warlock/Cyber-Warlock'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
